--- a/index.html
+++ b/index.html
@@ -42,19 +42,29 @@
 </div>
 </nav>
 <header>
-
-    <div class="container">
-        <div class="row">
+    <div class=" header__container">
+        <div class="header__row">
             <div class="header__description">
             <h1>Beautiful React Templates <span class="purple">for you</span></h1>
-            <p>Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
-            <form action="">
-            <input type="email" placeholder="Your E-mail Address">
-            <button>Get Started</button>
+            <p class="header__description--para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
+            <form class="header__email" action="">
+            <input type="email" class="header__email--input" placeholder="Your E-mail Address">
+            <button class="header__email--button">Get Started</button>
             </form>
+            
+            <p class="header__customers--title">OUR TRUSTED CUSTOMERS</p>
+            <figure>
+                <img class="header__customer--logo" src="./customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="header__customers">
+            </figure>
             </div>
         </div>
+        <figure class="header__img--wrapper">
+        <img class="header__img" src="./design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="header__img">
+        </figure>
     </div>
+
+    
+</div>
 </header>
     </section>
 </body>
