--- a/index.html
+++ b/index.html
@@ -62,10 +62,123 @@
         <img class="header__img" src="./design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="header__img">
         </figure>
     </div>
-
-    
 </div>
 </header>
     </section>
+    <main>
+        <section id="features">
+
+            <div class="container">
+                <div class="row__narrow">
+                    <h4 class="section__tag">FEATURES</h4>
+                    <h2 class="features__section--title">We have Amazing <span class="purple">Service</span></h2>
+                    <div class="features__section--para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias saepe minima eos error aperiam maiores ex asperiores vitae magni ea? Ea cupiditate magni eos autem? Tempore excepturi maxime minima perferendis.
+                    </div>
+                    <div class="features">
+                        <div class="feature">
+                            <div class="feature__row">
+
+                                <figure class="feature__img--wrapper">
+                                    <img src="./shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="feature__img">
+                                </figure>
+                            </div>
+                                <div class="feature__text">
+                                    <h2 class="feature__title">Secure</h2>
+                                    <p class="feature__para">We deal strictly with vendors that provide top notch security</p>
+
+                                </div>
+                        </div>
+                        <div class="feature">
+                            <div class="feature__row">
+
+                                <figure class="feature__img--wrapper">
+                                    <img src="./support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="feature__img">
+                                </figure>
+                            </div>
+                                <div class="feature__text">
+                                    <h2 class="feature__title">24/7 Support</h2>
+                                    <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates rerum </p>
+
+                                </div>
+                        </div>
+                        <div class="feature">
+                            <div class="feature__row">
+
+                                <figure class="feature__img--wrapper">
+                                    <img src="./customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="feature__img">
+                                </figure>
+                            </div>
+                                <div class="feature__text">
+                                    <h2 class="feature__title">Customizable</h2>
+                                    <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates rerum  </p>
+
+                                </div>
+                        </div>
+                        <div class="feature">
+                            <div class="feature__row">
+
+                                <figure class="feature__img--wrapper">
+                                    <img src="./reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="feature__img">
+                                </figure>
+                            </div>
+                                <div class="feature__text">
+                                    <h2 class="feature__title">Reliable</h2>
+                                    <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates rerum </p>
+
+                                </div>
+                        </div>
+                        <div class="feature">
+                            <div class="feature__row">
+
+                                <figure class="feature__img--wrapper">
+                                    <img src="./fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="feature__img">
+                                </figure>
+                            </div>
+                                <div class="feature__text">
+                                    <h2 class="feature__title">Fast</h2>
+                                    <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates rerum </p>
+
+                                </div>
+                        </div>
+                        <div class="feature">
+                            <div class="feature__row">
+
+                                <figure class="feature__img--wrapper">
+                                    <img src="./simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt="feature__img">
+                                </figure>
+                            </div>
+                                <div class="feature__text">
+                                    <h2 class="feature__title">Simple</h2>
+                                    <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates rerum </p>
+
+                                </div>
+                        </div>
+                    </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="quality">
+            <div class="quality__container">
+                <div class="quality__row">
+                    <div class="quality__description">
+                        <div class="quality__section--tag">QUALITY WORK</div>
+                        <h2 class="quality__section--title">Designed & Developed by <span class="purple">Professionals</span></h2>
+                        <p class="quality__section--para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum cumque, asperiores officiis quo dolorem, amet, perspiciatis tempora voluptatum aliquam quas ab cum? Neque culpa nam adipisci illum rerum illo similique!</p>
+                        <button class="quality__btn">Learn More</button>
+                    </div>
+                    <figure class="quality__img--wrapper">
+                        <img class="quality__img" src="./hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
+                    </figure>
+                </div>
+            </div>
+        </section>
+
+
+
+
+    </main>
 </body>
 </html>
