--- a/index.html
+++ b/index.html
@@ -175,6 +175,71 @@
                 </div>
             </div>
         </section>
+        <section id="steps">
+            <div class=" steps__container">
+                <div class="steps__row">
+                    <figure class="steps__img--wrapper">
+                        <img src="./hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+                    </figure>
+                    <div class="steps__description">
+                        <div class="steps__tag">STEPS</div>
+                        <h2 class="steps__title">Easy to
+                             <span class="purple">Get Started</span>
+                        </h2>
+                        <div class=" steps__list">
+                            <div class="step">
+                                <div class="step__number">01</div>
+                                <div step__description>
+                                    <div class="step__title">
+                                        Register
+                                    </div>
+                                    <p class="step__para">Create an account with us using Google or Facebook.</p>
+                                </div>
+                            </div>
+                            <div class="step">
+                                <div class="step__number">02</div>
+                                <div step__description>
+                                    <div class="step__title">
+                                        Download
+                                    </div>
+                                    <p class="step__para">Browse and Download the template you like from the marketplace.</p>
+                                </div>
+                            </div>
+                            <div class="step">
+                                <div class="step__number">03</div>
+                                <div step__description>
+                                    <div class="step__title">
+                                        Run
+                                    </div>
+                                    <p class="step__para">Follow the instructions to setup and customize the template for your needs.</p>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="values">
+            <div class="values__container">
+                <div class="values__row">
+                    <div class="values__description">
+                        <div class="values__tag">Values</div>
+                        <h2 class="values__title">We Always Abide by Our 
+                            <span class="purple">Principles</span>
+                        </h2>
+                        <div class="values__para">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque, ipsam voluptatum! Dolores nisi fugiat laborum tempore quasi voluptates? Ipsam vero impedit dolor facilis labore ut nesciunt? Totam ducimus ullam iusto!
+                        </div>
+<div class="values__list">
+    <div class="value">
+        <figure class="value__img--wrapper">
+            <img src="./" alt="">
+        </figure>
+    </div>
+</div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
