--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Evan Final Project</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./script.js">
-    <script src="https://kit.fontawesome.com/49c5b4596a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/b4ade9c213.js" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 
 </head>
@@ -230,16 +230,28 @@
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque, ipsam voluptatum! Dolores nisi fugiat laborum tempore quasi voluptates? Ipsam vero impedit dolor facilis labore ut nesciunt? Totam ducimus ullam iusto!
                         </div>
 <div class="values__list">
-    <div class="value">
-        <figure class="value__img--wrapper">
-            <img src="./" alt="">
+    <div class="value__title">
+        <figure class="value__img--wrapper1">
+            <i class="fa-solid fa-dollar-sign"></i>
         </figure>
+        <div class="value__name">Affordable</div>
     </div>
+    <div class="value__para">We promise to offer you the best rate we can - at par with industry standard</div>
+    <div class="value__title">
+        <figure class="value__img--wrapper2">
+            <i class="fa-regular fa-briefcase"></i>
+        </figure>
+        <div class="value__name">Professionalism</div>
+    </div>
+    <div class="value__para">We assure that our templates are designed and created by professional designers</div>
 </div>
+<button class="values__btn">Learn More</button>
                     </div>
+                    <img class="values__img" src="./prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
                 </div>
             </div>
         </section>
+        
 
 
 
