--- a/index.html
+++ b/index.html
@@ -251,6 +251,26 @@
                 </div>
             </div>
         </section>
+        <section id="pricing">
+            <div class="pricing__container">
+                <div class="pricing__row">
+                    <div class="pricing__section--tag">pricing</div>
+                    <h2 class="pricing__section--title">Reasonable & Flexible <span class="purple">Plans</span></h2>
+                    <p class="pricing__section--para">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, dolore minima temporibus illo optio at veniam nam laudantium sit et? Doloremque, voluptatum quibusdam nobis natus dicta quas iusto. Alias, perferendis.
+                    </p>
+                    <div class="plans">
+
+                        <div class="plan">
+                            <div class="plan__stripe"></div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
         
 
 
