--- a/index.html
+++ b/index.html
@@ -255,21 +255,75 @@
             <div class="pricing__container">
                 <div class="pricing__row">
                     <div class="pricing__section--tag">pricing</div>
-                    <h2 class="pricing__section--title">Reasonable & Flexible <span class="purple">Plans</span></h2>
+                    <h2 class="pricing__section--title">Reasonable & Flexible <span class="purple">Plans.</span></h2>
                     <p class="pricing__section--para">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, dolore minima temporibus illo optio at veniam nam laudantium sit et? Doloremque, voluptatum quibusdam nobis natus dicta quas iusto. Alias, perferendis.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, dolore minima temporibus illo optio at veniam nam laudantium sit et? 
                     </p>
+                </div>
                     <div class="plans">
 
                         <div class="plan">
                             <div class="plan__stripe"></div>
-                            
+                            <div class="plan__top">
+                                <div class="plan__name">PERSONAL</div>
+                            <div class="plan__price">$17.99</div>
+                            <div class="plan__duration">MONTHLY</div>
+                            </div>
+                            <div class="plan__middle">
+                                <div class="plan__target">For Individuals</div>
+                                <p class="plan__feature">30 Templates
+                                </p>
+                                <p class="plan__feature">7 Landing pages
+                                </p>
+                                <p class="plan__feature">12 Internal pages
+                                </p>
+                                <p class="plan__feature">Basic Assistance
+                                </p>
+                            </div>
+                            <div class="plan__bottom">
+                                <button class="plan__button">BUY NOW
+                                </button>
+                            </div>
+                        </div>
+                        <div class="plan">
+                            <div class="plan__stripe"></div>
+                            <div class="plan__top">
+                                <div class="plan__name">BUSINESS</div>
+                                <div class="plan__price">$37.99</div>
+                                <div class="plan__duration">MONTHLY</div>
+                            </div>
+                            <div class="plan__middle">
+                                <p class="plan__target">For Small Businesses</p>
+                                <p class="plan__feature">60 Templates</p>
+                                <p class="plan__feature">15 Landing Pages</p>
+                                <p class="plan__feature">22 Internal Pages</p>
+                                <p class="plan__feature">Priority Assistance</p>
+                            </div>
+                            <div class="plan__bottom">
+                                <button class="plan__button">BUY NOW</button>
+                            </div>
+                            ,</div>
+                        <div class="plan">
+                            <div class="plan__stripe"></div>
+                            <div class="plan__top">
+                                <div class="plan__name">ENTERPRISE</div>
+                                <div class="plan__price">$57.99</div>
+                                <div class="plan__duration">MONTHLY</div>
+                            </div>
+                            <div class="plan__middle">
+                                <p class="plan__target">For Large Companies</p>
+                                <p class="plan__feature">90 Templates</p>
+                                <p class="plan__feature">27 Landing Pages</p>
+                                <p class="plan__feature">37 Internal Pages</p>
+                                <p class="plan__feature">Personal Assistance</p>
+                            </div>
+                            <div class="plan__bottom">
+                                <button class="plan__button">BUY NOW</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
         </section>
         
 
