--- a/index.html
+++ b/index.html
@@ -390,6 +390,66 @@
             </div>
         </section>
     </main>
-    
+    <footer>
+        <div class="footer__container">
+            <div class=" row footer__row">
+                <div class="footer__columns">
+                    <div class="footer__column">
+                       <div class="footer__column--title">MAIN</div>
+                      <a class="footer__column--link" href="#">Blog</a>
+                      <a class="footer__column--link" href="#">FAQs</a>
+                      <a class="footer__column--link" href="#">Support</a>
+                      <a class="footer__column--link" href="#">About Us</a>
+                    </div>
+                    <div class="footer__column">
+                       <div class="footer__column--title">Products</div>
+                      <a class="footer__column--link" href="#">Log In</a>
+                      <a class="footer__column--link" href="#">Personal</a>
+                      <a class="footer__column--link" href="#">BUsiness</a>
+                      <a class="footer__column--link" href="#">Team</a>
+                    </div>
+                    <div class="footer__column">
+                       <div class="footer__column--title">PRESS</div>
+                      <a class="footer__column--link" href="#">Logos</a>
+                      <a class="footer__column--link" href="#">Events</a>
+                      <a class="footer__column--link" href="#">Stories</a>
+                      <a class="footer__column--link" href="#">Office</a>
+                    </div>
+                    <div class="footer__column">
+                       <div class="footer__column--title">TEAM</div>
+                      <a class="footer__column--link" href="#">Career</a>
+                      <a class="footer__column--link" href="#">Founders</a>
+                      <a class="footer__column--link" href="#">Culture</a>
+                      <a class="footer__column--link" href="#">Onboarding</a>
+                    </div>
+                    <div class="footer__column">
+                       <div class="footer__column--title">LEGAL</div>
+                      <a class="footer__column--link" href="#">GDPR</a>
+                      <a class="footer__column--link" href="#">Privacy Policy</a>
+                      <a class="footer__column--link" href="#">Terms of Service</a>
+                      <a class="footer__column--link" href="#">Disclaimer</a>
+                    </div>
+                    </div>
+                    <div class="footer__divider"></div>
+                    <div class="footer__bottom">
+                        <div class="footer__logo">
+                            <img class="footer__logo--img" src="./logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+                            <h5 class="footer__logo--text">Treact Inc.</h5>
+                        </div>
+                    <div class="footer__copyright">&copy; 2018 Treact Inc. All Rights Reserved</div>
+
+                    <div class="footer__socials">
+                        <a class="footer__social--link"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a class="footer__social--link"><i class="fa-brands fa-twitter"></i></a>
+                        <a class="footer__social--link"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </footer>
+
 </body>
 </html>
